<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>com.epam.jmp</groupId>
  <artifactId>jmp.classloading</artifactId>
  <version>0.0.1-SNAPSHOT</version>
  <name>JMP: Classloading and GC</name>
    <dependencies>
        <dependency>
            <groupId>log4j</groupId>
            <artifactId>log4j</artifactId>
            <version>1.2.17</version>
        </dependency>
    </dependencies>
    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>
    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.1</version>
                <configuration>
                    <source>1.8</source>
                    <target>1.8</target>
            </configuration>
            </plugin>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>exec-maven-plugin</artifactId>
                <version>1.3.2</version>
                <configuration>
                    <executable>java</executable>
                    <arguments>
                        <argument>-Xms${java.gc.xms}</argument>
                        <argument>-Xmx${java.gc.xmx}</argument>
                        <argument>-XX:NewSize=${java.gc.new.size}</argument>
                        <argument>-XX:MaxNewSize=${java.gc.max.new.size}</argument>
                        <argument>-XX:PermSize=${java.gc.perm.size}</argument>
                        <argument>-XX:MaxPermSize=${java.gc.max.perm.size}</argument>
                        <argument>${java.gc.threads}</argument>
                        <argument>-XX:+${java.gc.type}</argument>
                        <argument>-classpath</argument>
                        <classpath/>
                        <argument>jmp.classloading.MainClass</argument>
                    </arguments>
                </configuration>
            </plugin>
        </plugins>
    </build>
    <profiles>
        <profile>
            <id>serialCollector</id>
            <properties>
                <java.gc.type>UseSerialGC</java.gc.type>
                <java.gc.xms>6m</java.gc.xms>
                <java.gc.xmx>18m</java.gc.xmx>
                <java.gc.new.size>2m</java.gc.new.size>
                <java.gc.max.new.size>2m</java.gc.max.new.size>
                <java.gc.perm.size>20m</java.gc.perm.size>
                <java.gc.max.perm.size>30m</java.gc.max.perm.size>
                <java.gc.threads>-Xms6m</java.gc.threads>
            </properties>
        </profile>
        <profile>
            <id>parallelCollector</id>
            <properties>
                <java.gc.type>UseParallelGC</java.gc.type>
                <java.gc.xms>3m</java.gc.xms>
                <java.gc.xmx>12m</java.gc.xmx>
                <java.gc.new.size>1m</java.gc.new.size>
                <java.gc.max.new.size>1m</java.gc.max.new.size>
                <java.gc.perm.size>20m</java.gc.perm.size>
                <java.gc.max.perm.size>20m</java.gc.max.perm.size>
                <java.gc.threads>-Xms3m</java.gc.threads>
            </properties>
        </profile>
        <profile>
            <id>parallelOldCollector</id>
            <properties>
                <java.gc.type>UseParallelOldGC</java.gc.type>
                <java.gc.xms>9m</java.gc.xms>
                <java.gc.xmx>18m</java.gc.xmx>
                <java.gc.new.size>3m</java.gc.new.size>
                <java.gc.max.new.size>3m</java.gc.max.new.size>
                <java.gc.perm.size>40m</java.gc.perm.size>
                <java.gc.max.perm.size>40m</java.gc.max.perm.size>
                <java.gc.threads>-Xms9m</java.gc.threads>
            </properties>
        </profile>
        <profile>
            <id>cmsCollector</id>
            <properties>
                <java.gc.type>UseConcMarkSweepGC</java.gc.type>
                <java.gc.xms>6m</java.gc.xms>
                <java.gc.xmx>18m</java.gc.xmx>
                <java.gc.new.size>2m</java.gc.new.size>
                <java.gc.max.new.size>2m</java.gc.max.new.size>
                <java.gc.perm.size>20m</java.gc.perm.size>
                <java.gc.max.perm.size>30m</java.gc.max.perm.size>
                <java.gc.threads>-Xms6m</java.gc.threads>
            </properties>
        </profile>
        <profile>
            <id>cms2Collector</id>
            <properties>
                <java.gc.type>UseConcMarkSweepGC</java.gc.type>
                <java.gc.xms>2m</java.gc.xms>
                <java.gc.xmx>18m</java.gc.xmx>
                <java.gc.new.size>1m</java.gc.new.size>
                <java.gc.max.new.size>1m</java.gc.max.new.size>
                <java.gc.perm.size>24m</java.gc.perm.size>
                <java.gc.max.perm.size>36m</java.gc.max.perm.size>
                <java.gc.threads>-XX:ConcGCThreads=2</java.gc.threads>
            </properties>
        </profile>
        <profile>
            <id>parallel2Collector</id>
            <properties>
                <java.gc.type>UseParallelGC</java.gc.type>
                <java.gc.xms>3m</java.gc.xms>
                <java.gc.xmx>12m</java.gc.xmx>
                <java.gc.new.size>1m</java.gc.new.size>
                <java.gc.max.new.size>1m</java.gc.max.new.size>
                <java.gc.perm.size>20m</java.gc.perm.size>
                <java.gc.max.perm.size>20m</java.gc.max.perm.size>
                <java.gc.threads>-XX:ParallelGCThreads=2</java.gc.threads>
            </properties>
        </profile>
        <profile>
            <id>g1Collector</id>
            <properties>
                <java.gc.type>UseG1GC</java.gc.type>
                <java.gc.xms>4m</java.gc.xms>
                <java.gc.xmx>16m</java.gc.xmx>
                <java.gc.new.size>2m</java.gc.new.size>
                <java.gc.max.new.size>2m</java.gc.max.new.size>
                <java.gc.perm.size>12m</java.gc.perm.size>
                <java.gc.max.perm.size>18m</java.gc.max.perm.size>
                <java.gc.threads>-Xms4m</java.gc.threads>
            </properties>
        </profile>
    </profiles>
</project>